--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="google" value="notranslate">
     <title>Messenger</title>
 
+    <meta name="yandex-verification" content="9df44bbe7fc75c1d" />
+
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
