Add index button

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
                 </div>
 
                 <div class="add_button">
-                    <span></span>
+                    <span>Download: .exe</span>
+                    <img src="./arrow.png" alt="">
                 </div>
             </div>
         </div>
