--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,7 @@
     </div>
 
     <script src="./socket_io.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="./index.js"></script>
 
 </body>
